--- a/reservation_service/src/main/resources/application.yml
+++ b/reservation_service/src/main/resources/application.yml
@@ -1,1 +1,18 @@
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/numble
+    username: root
+    password: 1234!
 
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: true
+    hibernate:
+      ddl-auto: create
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
