--- a/reservation_service/build.gradle
+++ b/reservation_service/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
     testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
     testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
+
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 }
 
 ext {
